--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img class="col-sm-1 img-fluid w-2" src="img/academiX.png" alt="" srcset=""> &nbsp;
+            <img style="width: 50px; height: 50px; border-radius: 50%" src="img/academiX.png" alt="" srcset=""> &nbsp;
             <h2 class="m-0 text-primary">AcademiX</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
